fixed some spacing and justify-content issues

--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -1,5 +1,6 @@
 .button-style {
         height: 30px;
+        text-align: center;
         border-radius: 20px;
         color: white;
         background-color: #ffda00;
